--- a/index.html
+++ b/index.html
@@ -7,19 +7,127 @@
     <title>Loja virtual</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
 
     <header>
-        
+        <nav>
+            <a class="logo" href="a">
+                <img src="img/img/logo.png" alt="Logo"> Loja
+            </a>
+            <ul>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#novidades">Recebe as novidades</a></li>
+                <li><a href="#sobre">Sobre a loja</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
 
+        <h3 id="topo">Produtos</h3>
+        <section id="produtos">
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+            <div class="card">
+                <img class="produto" src="img/img/notebook.png" alt="foto do produto">
+                <img class="favorito" src="img/img/heart.png" alt="favoritar">
+                <h4>Notebook XPTO</h4>
+                <span>R$ 5000,00</span>
+            </div>
+
+        </section>
+
+        <div class="full">
+            <h3>Receba nossas novidades</h3>
+            <section id="novidades">
+                <form class="form_lead">
+                    <input type="email" name="email" placeholder="Digite seu email...">
+                    <button type="submit">Cadastrar</button>
+                </form>
+            </section>
+        </div>
+
+        <h3>Sobre a loja</h3>
+        <section id="sobre">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat repellat molestiae neque aliquid assumenda officia, ut debitis ipsum adipisci maiores? Ex magni corrupti iste obcaecati illum qui autem aliquid eum!
+            Dolores, error illo deserunt quam quos asperiores quae alias ex repudiandae sequi non pariatur. Molestias adipisci aliquam perspiciatis sed! Omnis quaerat ipsam reiciendis optio perspiciatis distinctio excepturi tempore nisi voluptatem?
+            Reiciendis sint excepturi aut facere distinctio harum molestias temporibus, necessitatibus dignissimos possimus mollitia soluta perferendis quasi unde perspiciatis cupiditate nisi quidem blanditiis sunt autem, expedita, molestiae deleniti dicta dolor. Dolore?
+            Neque culpa minus ratione sed et nihil, architecto a impedit libero voluptatum quis cumque iusto voluptas accusantium voluptatibus explicabo asperiores cupiditate ipsa modi corporis obcaecati. Doloribus vitae quis voluptatum ex.
+            Necessitatibus magnam, illo neque nihil, repellat assumenda recusandae ad voluptatibus perferendis ipsam ducimus quibusdam. Debitis est voluptatem unde magni inventore! Expedita iusto qui reprehenderit quidem aut quam commodi porro rem.
+        </section>
+
     </main>
 
     <footer>
-
+        <p>Todos os direitos reservados</p>
+        <a href="#topo" title="voltar ao topo">
+            <img class="topo" src="img/img/topo.png" alt="voltar ao topo">
+        </a>
     </footer>
 
 </body>
